<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search</string>

    <string name="movie_title">Movie Title</string>
    <string name="poster">Poster</string>
    <string name="backdrop">Backdrop</string>
    <string name="releaseDate">Release Date</string>
    <string name="genre">Genres</string>
    <string name="overview">Overview</string>
    <string name="runtime">Runtime</string>
    <string name="minutes">%1$s Minutes</string>

    <string name="retry">RETRY</string>
    <string name="no_data">NO DATA</string>
    <string name="no_result">NO RESULT</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="delete_favorite">Removed from Favorites</string>

    <string name="settings">Settings</string>
    <string name="language_setting">Language</string>
    <string name="notification_setting">Notification</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_message">Catalogue Movie missing you!</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="new_movies_count">%1$s new movies</string>
    <string name="release_reminder_message">%1$s has been released today!</string>
    <string name="no_new_movies">There is no new movie that released today.</string>
    <string name="widget_banner">FAVORITE MOVIE</string>
    <string name="daily_reminder_desc">Reminder showing the movie that released today</string>
    <string name="reminder_showing_the_movie_that_released_today">Reminder for return to app</string>

</resources>
