<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/settings" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/title_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/language_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/language_setting"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/title_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/notification_setting"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/daily_reminder_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <TextView
                    android:id="@+id/desc_daily"
                    android:layout_below="@id/txt_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/daily_reminder_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </RelativeLayout>

        <Switch
            android:id="@+id/dailyReminderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/release_reminder_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <TextView
                    android:id="@+id/desc_release"
                    android:layout_below="@id/txt_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/reminder_showing_the_movie_that_released_today"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </RelativeLayout>

            <Switch
                android:id="@+id/releaseReminderSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_weight="5"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>