<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame">

    <LinearLayout
        android:id="@+id/layout_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:background="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/movie_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/overview"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>